# ba_opt

./: .gitignore  robot  test.py  test_imu.py  test_livox.py  test_pd_time.py  test_point.py  test_pose.py  test_pose_time.py  test_tf.py
.cache/clangd/index/: allocators.h.4E18A4886542B236.idx  biginteger.h.7A0D65C8C3C5554F.idx  bin.cc.8307BEC2D7EEAD6B.idx  bin.h.DED05DFE982F38BC.idx  cache_index.cpp.4CFC704E8470F53C.idx  cache_index.h.83AC337943014F25.idx  clzll.h.74C1DF451E623CBA.idx  comm.cpp.CB3F67FBAF7E5B47.idx  comm.h.F04EB2FF6D984A1D.idx  complementary_filter.cpp.B09C7AF329D15CBE.idx  complementary_filter.h.0107EA54A763AD30.idx  complementary_filter_node.cpp.0BB3ADAC7E2CC4F9.idx  complementary_filter_ros.cpp.1E38463D59FAA083.idx  complementary_filter_ros.h.FEC441BB48BC70AA.idx  diyfp.h.CA492D033194D400.idx  document.h.2BF4BF0652E7EE2A.idx  driver_node.cpp.6EA3E46406BA8366.idx  driver_node.h.67728951506202FB.idx  dummy_pointcloud_publisher.cpp.CE1BEFA700B3ECC9.idx  encodedstream.h.CC24AC2D37B5B7A5.idx  encodings.h.4DA723EE3D58AD32.idx  error.h.B6469744B6422150.idx  filereadstream.h.4D38DDCB5920F9AC.idx  ground_segmentation.cc.79697D4E40F62EC0.idx  ground_segmentation.h.B395723CDE4D715E.idx  ground_segmentation_node.cc.3B65655C6A216CA7.idx  ground_segmentation_test_node.cc.071D47534B302667.idx  icp_registration.cpp.824B2687EFC2500D.idx  icp_registration.hpp.9E58BEA74912129B.idx  ieee754.h.24C61FD015B25CAB.idx  laserscan_to_pointcloud_node.cpp.7D6FD9D3E5E5C198.idx  laserscan_to_pointcloud_node.hpp.93DDAA07131795C0.idx  lddc.cpp.13A1B326B2A487A3.idx  lddc.h.623F4CF5CBEFB71A.idx  ldq.cpp.890E7AFA7ED3E970.idx  ldq.h.3D58981FA0FAAF75.idx  lds.cpp.D11D4DE8FF73AE3B.idx  lds.h.C80144452A61AE63.idx  lds_lidar.cpp.5EF4C8934FF9E15F.idx  lds_lidar.h.82D7D48E2951984B.idx  (+37 more)
build_logs/: build_summary.txt  package_list.txt
doc/文档/: 产品使用手册.docx
doc/文档/定位算法说明资料/: README_self.md
doc/文档/建图算法说明文档/: FastLIO2_技术文档.md  FastLIO2_流程图.md  FastLIO2_算法原理.md  README.md
scripts/: build_one_by_one.sh
src/robot_base/: CMakeLists.txt  package.xml
src/robot_base/config/: controllers.yaml
src/robot_base/launch/: bringup.launch.py
src/robot_base/src/: laser_filter.cpp  robotcar_hardware_interface.cpp
src/robot_base/urdf/: four_diff.urdf  four_diff.xacro  robotcar.urdf  robotcar.xacro
src/robot_hardware_driver/hipimu_driver/hipnuc_imu/config/: hipnuc_config.yaml
src/robot_hardware_driver/livox_ros_driver2/config/: MID360_config.json
src/robot_navigation/src/: CMakeLists.txt  package.xml
src/robot_navigation/src/behavior_trees/: navigate_on_route_graph_arch1_jazzy.xml  navigate_on_route_graph_arch2_jazzy_first_last_mile.xml  navigate_on_route_graph_w_recovery.xml
src/robot_navigation/src/launch/: bringup.launch.py  localization.launch.py  navigation.launch.py
src/robot_navigation/src/map/: 1126.pgw  1126.yaml  map.yaml  route.gpkg
src/robot_navigation/src/params/: nav2_params.yaml
src/robot_navigation/src/rviz/: nav2_default_view.rviz
src/robot_navigation/src/scripts/: twist_stamper.py
src/robot_perception/clear_costmap_caller/src/: clear_costmap_caller.cpp
src/robot_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/launch/: segmentation_params.yaml
src/robot_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc
src/slam/fastlio2_ros2/ba_optimize/: CMakeLists.txt  package.xml
src/slam/fastlio2_ros2/ba_optimize/launch/: ba_argbot_mid360.launch.py
src/slam/fastlio2_ros2/ba_optimize/rviz/: BA.rviz
src/slam/fastlio2_ros2/fastlio2/config/: argbot_mid360.yaml
src/slam/fastlio2_ros2/fastlio2/launch/: argbot_mid360.launch.py
src/slam/fastlio2_ros2/interface/: CMakeLists.txt
src/slam/indoor_location/: README.md
src/slam/indoor_location/config/rviz/: livox_rviz_config.rviz
src/slam/indoor_location/src/: location_p2pl_icp.cpp
src/slam/indoor_location/src/cloud_process/livox_mid360_lidar/: cloud_process_livox.cpp
src/slam/lidar_localization_ros2/include/lidar_localization/: lidar_localization_component.hpp
src/slam/lidar_localization_ros2/src/: lidar_localization_component.cpp
src/slam/pointcloud_to_2dmap_ros2/: CMakeLists.txt  README.md  package.xml
src/slam/pointcloud_to_2dmap_ros2/launch/: pointcloud_to_2dmap.launch_indoor.py  pointcloud_to_2dmap.launch_outdoor.py
src/slam/pointcloud_to_2dmap_ros2/src/: pointcloud_to_2dmap_ros.cpp
src/tools/pcd2elevation/: CMakeLists.txt  README.md  package.xml
src/tools/pcd2elevation/config/: PclLoaderParameters.yaml  config.yaml  pcd_grid_rviz.yaml
src/tools/pcd2elevation/include/pcd2elevation/: pcd2elevation.hpp
src/tools/pcd2elevation/launch/: pcd2elevation.launch.py
src/tools/pcd2elevation/src/: pcd2elevation.cpp
src/tools/pcd2pgm/: 1126.pgm  1126.yaml
src/tools/pcd2pgm/config/: pcd2pgm.yaml
