<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_to_2dmap_ros2</name>
  <version>0.1.0</version>
  <description>A package for converting point cloud data to a 2D map</description>
  <maintainer email="laiyichengyuntech@gmail.com">Lai Yi-Cheng</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>PCL</depend>
  <depend>OpenCV</depend>
  <depend>std_msgs</depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
